# fineguard

./: .coverage  .dockerignore  .env  AZURE_DEVOPS_DEPLOYMENT_GUIDE.md  COMPLETE_AZURE_DEPLOYMENT.md  COMPLETE_FINEGUARD_SYSTEM.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.sh  Dockerfile  FINEGUARD_SERVICES_INVENTORY.md  HANDOVER.json  LIVE_AZURE_DEPLOYMENT.md  QUICK_DEPLOY_COMMANDS.md  README_FOR_NEXT_DEVELOPER.md  TESTING.md  TEST_SUMMARY.md  create_agents.sh  docker-compose.yml  fix-companies-schema.sql  fix.sh  local.settings.json  package-lock.json  package.json  prove-real-system.js  pyproject.toml  pytest.ini  requirements.txt  run-schema-fix.js  server.js  setup-test-data.js  simple-server.js  simple-server.js.backup  test-full-system.js
.azure/: config
.azuredevops/: azure-pipelines-advanced.yml  azure-pipelines.yml
.claude/: settings.local.json
.github/: QUICK_START_TESTING.md
AlertIntel/: __init__.py
AuditAgent/: __init__.py
BillingAgent/: __init__.py
ComplianceOpsAgent/: __init__.py
DataSentinel/: __init__.py  function.json
SalesAgent/: __init__.py
api/: accountants.js  auth.js  billing.js  companies.js  enrichment.js  portal.js
azure/: infrastructure.bicep  parameters.json
client/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
files/: ENTERPRISE_SYSTEM_ANALYSIS.md  cache.js  ci-cd.yml  package.json  perplexity.js  pool.js  server.js
scripts/: deploy-azure.sh  deploy-infrastructure.sh  import-companies-azure.js  import-companies-bulk.js  import-companies-optimized.js  init.sh  (+5 more)
(+41 files in other folders)
